# cpp20-features

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
atomic-ref/: CMakeLists.txt  atomic-ref.cpp
concept-requirements/: CMakeLists.txt  concept-requirements.cpp  concept-requirements.h
range-views/: CMakeLists.txt  range-views.cpp
spaceship-operator/: CMakeLists.txt  spaceship-operator.cpp  spaceship-operator.h
struct-size-alignment/: CMakeLists.txt  struct-size-alignment  struct-size-alignment.cpp
template-type-deduction/: CMakeLists.txt  template-type-deduction.cpp
